# search-service

./: .env.example  CLAUDE.md  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: codeql.yml  deploy.yml
app/: cache.py  config.py  limiter.py  logger.py  main.py  models.py  usage.py
app/mcp/: server.py
app/providers/: base.py  brave.py  firecrawl.py  registry.py  tavily.py
app/routes/: admin.py  search.py
docs/: ARCHITECTURE.md  CODING_CONVENTIONS.md
docs/superpowers/plans/: 2026-06-24-firecrawl-hit-rate.md
scripts/: check_architecture.py
tests/: test_firecrawl_usage.py  test_search.py  test_usage.py
