[project]
name = "search-service"
version = "0.1.0"
description = "Universal search middleware service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "redis>=5.0.0",
    "pydantic-settings>=2.6.0",
    "slowapi>=0.1.9",
    "structlog>=24.4.0",
    "fastmcp>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
